name:           DnaProteinAlignment
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2013
copyright:      Christian Hoener zu Siederdissen, 2013
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
synopsis:
                Frameshift-aware alignment of protein sequences with DNA sequences
description:
                Perform a "glocal" alignment of a DNA sequence (local) with a
                protein sequence (global). The alignment includes the
                possibility of frame shifts.
                .
                The dynamic programming algorithm is created automatically from
                atomic single-tape grammars using our grammar product
                framework.
                .
                .
                .
                If you find this library or program useful, please cite:
                .
                .
                .
                Christian Höner zu Siederdissen, Ivo L. Hofacker, and Peter F. Stadler
                .
                How to Multiply Dynamic Programming Algorithms
                .
                TCBB (submitted)
                .
                .
                .
                Christian Höner zu Siederdissen, Ivo L. Hofacker, and Peter F. Stadler
                .
                How to Multiply Dynamic Programming Algorithms
                .
                Brazilian Symposium on Bioinformatics (BSB 2013)
                .
                Lecture Notes in Bioinformatics 8213, Springer, Heidelberg



Extra-Source-Files:
  BioInf/Alignment/DnaProtein.gra



library
  build-depends:
    base >= 4 && < 5,
    ADPfusion       >= 0.2.0   ,
--    FormalGrammars  >= 0.0.0.1 ,
--    GrammarProducts >= 9.9.9.9 ,
    PrimitiveArray  >= 0.5.1.0
  exposed-modules:
    BioInf.Alignment.DnaProtein
  ghc-options:

executable DnaProteinAlignment
  build-depends:
    cmdargs == 0.10.*
  ghc-options:
  main-is:
    DnaProteinAlignment.hs



source-repository head
  type: git
  location: git://github.com/choener/DnaProteinAlignment

